edit swagger, auth, redirect controllers
